--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main class="maindiv">
+	<main class="holder">
 		<div id="div3">3</div>
 		<div id="div1">2</div>
 		<div id="div2">1</div>
